Troubleshooting layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
+  /* Used 4vw for horizontal padding */
   padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
@@ -298,6 +299,7 @@ a {
   flex-grow: 1;
   /* Added 2 rem for input in domain block */
   padding: 1.5rem 2rem;
+  /* This helped in troubleshooting -  meaning input is taking unnecessary width */
   width: 0;
 }
 
@@ -754,8 +756,9 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
